--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-moment": "^1.1.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.0.tar.gz",
     "react-native-gesture-handler": "~1.7.0",
+    "react-native-modal-datetime-picker": "^9.2.0",
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.4",
     "react-native-screens": "~2.10.1",
