--- a/package.json
+++ b/package.json
@@ -31,9 +31,12 @@
     "react-native-gesture-handler": "~1.7.0",
     "react-native-modal-datetime-picker": "^9.2.0",
     "react-native-reanimated": "~1.13.0",
+    "react-native-responsive-linechart": "^5.7.1",
     "react-native-safe-area-context": "3.1.4",
     "react-native-screens": "~2.10.1",
+    "react-native-svg": "^12.1.0",
     "react-native-swipeout": "^2.3.6",
+    "react-native-vector-icons": "^8.1.0",
     "react-native-web": "~0.13.12",
     "react-navigation": "^4.4.3",
     "react-navigation-drawer": "^2.6.0",
